#9 Pruned empty classes

--- a/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
@@ -80,12 +80,12 @@ items:
   summary: "\nRules for daylight savings time\n"
   remarks: 
   syntax: 
-    content: NSTimeZoneRuleDictionary GetTimeZoneDSTRules()
+    content: Map GetTimeZoneDSTRules()
     parameters: []
     return:
-      type: CRMScript.NetServer.NSTimeZoneRuleDictionary
+      type: CRMScript.NetServer.Map
   example: 
-  - "\n<pre><code>NSTimeZoneData thing;\nNSTimeZoneRuleDictionary timeZoneDSTRules = thing.GetTimeZoneDSTRules();</code></pre>\n"
+  - "\n<pre><code>NSTimeZoneData thing;\nMap timeZoneDSTRules = thing.GetTimeZoneDSTRules();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTimeZoneData.GetTimeZoneSTDRules()
   commentId: M:CRMScript.NetServer.NSTimeZoneData.GetTimeZoneSTDRules()
   id: 'GetTimeZoneSTDRules()'
@@ -99,12 +99,12 @@ items:
   summary: "\nRules for standard time\n"
   remarks: 
   syntax: 
-    content: NSTimeZoneRuleDictionary GetTimeZoneSTDRules()
+    content: Map GetTimeZoneSTDRules()
     parameters: []
     return:
-      type: CRMScript.NetServer.NSTimeZoneRuleDictionary
+      type: CRMScript.NetServer.Map
   example: 
-  - "\n<pre><code>NSTimeZoneData thing;\nNSTimeZoneRuleDictionary timeZoneSTDRules = thing.GetTimeZoneSTDRules();</code></pre>\n"
+  - "\n<pre><code>NSTimeZoneData thing;\nMap timeZoneSTDRules = thing.GetTimeZoneSTDRules();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTimeZoneData.GetTZLocationCities()
   commentId: M:CRMScript.NetServer.NSTimeZoneData.GetTZLocationCities()
   id: 'GetTZLocationCities()'
@@ -237,10 +237,10 @@ items:
   summary: "\nRules for daylight savings time\n"
   remarks: 
   syntax: 
-    content: Void SetTimeZoneDSTRules(NSTimeZoneRuleDictionary timeZoneDSTRules)
+    content: Void SetTimeZoneDSTRules(Map timeZoneDSTRules)
     parameters:
   example: 
-  - "\n<pre><code>NSTimeZoneData thing;\nNSTimeZoneRuleDictionary timeZoneDSTRules;\nthing.SetTimeZoneDSTRules(timeZoneDSTRules);</code></pre>\n"
+  - "\n<pre><code>NSTimeZoneData thing;\nMap timeZoneDSTRules;\nthing.SetTimeZoneDSTRules(timeZoneDSTRules);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTimeZoneData.SetTimeZoneSTDRules()
   commentId: M:CRMScript.NetServer.NSTimeZoneData.SetTimeZoneSTDRules()
   id: 'SetTimeZoneSTDRules()'
@@ -254,10 +254,10 @@ items:
   summary: "\nRules for standard time\n"
   remarks: 
   syntax: 
-    content: Void SetTimeZoneSTDRules(NSTimeZoneRuleDictionary timeZoneSTDRules)
+    content: Void SetTimeZoneSTDRules(Map timeZoneSTDRules)
     parameters:
   example: 
-  - "\n<pre><code>NSTimeZoneData thing;\nNSTimeZoneRuleDictionary timeZoneSTDRules;\nthing.SetTimeZoneSTDRules(timeZoneSTDRules);</code></pre>\n"
+  - "\n<pre><code>NSTimeZoneData thing;\nMap timeZoneSTDRules;\nthing.SetTimeZoneSTDRules(timeZoneSTDRules);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTimeZoneData.SetTZLocationCities(String)
   commentId: M:CRMScript.NetServer.NSTimeZoneData.SetTZLocationCities(String)
   id: 'SetTZLocationCities(String)'
@@ -343,12 +343,12 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
-- uid: CRMScript.NetServer.NSTimeZoneRuleDictionary
-  commentId: T:CRMScript.NetServer.NSTimeZoneRuleDictionary
+- uid: CRMScript.NetServer.Map
+  commentId: T:CRMScript.NetServer.Map
   isExternal: true
-  name: NSTimeZoneRuleDictionary
-  nameWithType: NSTimeZoneRuleDictionary
-  fullName: CRMScript.NetServer.NSTimeZoneRuleDictionary
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.NetServer.Map
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
